--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion build_versions.build_tools
 
     defaultConfig {
-        applicationId "com.livtech.indihood"
+        applicationId "com.livtech.demo"
         minSdkVersion build_versions.min_sdk
         targetSdkVersion build_versions.target_sdk
         versionCode 1
@@ -24,8 +24,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -34,6 +34,12 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+    configurations { implementation.exclude group: 'org.jetbrains', module: 'annotations' }
+
+    packagingOptions {
+        exclude "/META-INF/*.kotlin_module"
+        exclude "**/kotlin/**"
     }
 
 }
@@ -66,6 +72,9 @@ dependencies {
     testImplementation deps.arch_core.testing
     testImplementation deps.coroutines.test
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+
 
     androidTestImplementation deps.atsl.runner
     androidTestImplementation deps.atsl.rules
@@ -73,4 +82,8 @@ dependencies {
     androidTestImplementation deps.espresso.core
     androidTestImplementation deps.espresso.contrib
     androidTestImplementation deps.arch_core.testing
+
+    annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.72'
+    annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
