--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    configurations { implementation.exclude group: 'org.jetbrains', module: 'annotations' }
+
+    packagingOptions {
+        exclude "/META-INF/*.kotlin_module"
+        exclude "**/kotlin/**"
+    }
 
 }
 
@@ -73,4 +79,8 @@ dependencies {
     androidTestImplementation deps.espresso.core
     androidTestImplementation deps.espresso.contrib
     androidTestImplementation deps.arch_core.testing
+
+    annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.2.71'
+    annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
