--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -83,8 +83,7 @@ dependencies {
     androidTestImplementation deps.espresso.contrib
     androidTestImplementation deps.arch_core.testing
 
-    annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.2.71'
+    annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.72'
     annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
 }
