--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        def tmdbApiKey = properties.getProperty("tmdb_api_key", "")
+
+        it.buildConfigField 'String', "TMDB_API_KEY", tmdbApiKey
+        it.resValue 'string', "api_key", tmdbApiKey
+    }
     buildFeatures {
         dataBinding true
     }
@@ -86,4 +94,8 @@ dependencies {
     annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.72'
     annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation deps.room.runtime
+    implementation deps.room.compiler
+    implementation deps.room.testing
 }
