Showing movie detail in webview is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.actitivities.BookmarkedActivity" />
+        <activity android:name=".ui.actitivities.MovieDetailActivity" />
 
     </application>
 
