--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion build_versions.compile_sdk
@@ -13,9 +14,12 @@ android {
         targetSdkVersion build_versions.target_sdk
         versionCode 1
         versionName "1.0"
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -23,6 +27,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        def ApiKey = properties.getProperty("api_key", "")
+
+        it.buildConfigField 'String', "API_KEY", ApiKey
+        it.resValue 'string', "api_key", ApiKey
     }
     buildFeatures {
         dataBinding true
@@ -55,6 +67,8 @@ dependencies {
     implementation deps.activity.activity_ktx
     implementation deps.constraint_layout
     implementation deps.kotlin.stdlib
+    implementation deps.kotlin.reflect
+    annotationProcessor deps.kotlin.compiler
     implementation deps.recyclerview
     implementation deps.cardview
     implementation deps.moshi_ktl
@@ -83,7 +97,16 @@ dependencies {
     androidTestImplementation deps.espresso.contrib
     androidTestImplementation deps.arch_core.testing
 
-    annotationProcessor 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.72'
     annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation deps.room.runtime
+    annotationProcessor deps.room.compiler
+    androidTestImplementation deps.room.testing
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+
 }
