--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
     kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1."
 
 }
