--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.actitivities.MainActivity"
+            android:name=".ui.actitivities.SplashActivity"
             android:hardwareAccelerated="true"
+            android:theme="@style/AppTheme.Launcher"
             android:screenOrientation="userPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.actitivities.LoginActivity" />
     </application>
 
 </manifest>
