--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         </activity>
         <activity android:name=".ui.actitivities.LoginActivity" />
         <activity android:name=".ui.actitivities.MainActivity" />
-        <activity android:name=".ui.actitivities.MessagesActivity" />
+        <activity
+            android:name=".ui.actitivities.MessagesActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
